--- a/resources/rubrica.cfg
+++ b/resources/rubrica.cfg
@@ -3,11 +3,11 @@ app-name=R-DeV | Rubrica
 #### Utilizzabile per scegliere il tipo di persistenza
 ## RDBMS: per utilizzo di database relazionali
 ## FILE: per utilizzo del file system
-persistence.type=RDBMS
+persistence.type=FILE
 #### Configurazioni per l'accesso al database
 app.db.host=jdbc:mysql://localhost
 app.db.port=3306
 app.db.name=rubrica
 app.db.username=root
-app.db.password=rdev
+app.db.password=Giovanotto.1
 app.db.driver.class=com.mysql.cj.jdbc.Driver
